# neural-network

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/common/: index_generator.cpp  index_generator.hpp  mnist_loader.cpp  mnist_loader.hpp
src/mlp/: layer.cpp  layer.hpp  perceptron.cpp  perceptron.hpp
src/nn/: activation_function.cpp  activation_function.hpp
